crates/vise/tests/ui/labels/bogus_field_type.rs
use vise::EncodeLabelSet;

#[derive(Debug, EncodeLabelSet)]
struct LabelSet {
    method: Vec<String>,
}

fn main() {}
